docs: update README; chore: update package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cnpj_brazil_consulta",
-  "version": "0.1.0",
+  "name": "next-12-ts-tailwind-app",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
