--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "22.12.0",
-    "@types/react": "19.0.8",
+    "@types/node": "12.20.55",
+    "@types/react": "17.0.38",
     "autoprefixer": "^10.4.14",
-    "eslint": "9.19.0",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "12.3.4",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.5.5"
+    "typescript": "^5.8.2"
   }
 }
